add validation error

--- a/src/views/products/add.ejs
+++ b/src/views/products/add.ejs
@@ -44,6 +44,7 @@
 									<label for="discount" class="form-label">DESCUENTO</label>
 									<input id="discount" placeholder="15" type="number" name="discount"
 										value="<%= locals.old && old.discount ? old.discount : null %>">
+										<p id="errorDiscount"></p>
 								</div>
 								<div class="form-edit-finalPrice">
 									<label for="finalPrice" class="form-label">PRECIO FINAL</label>
