--- a/src/views/products/add.ejs
+++ b/src/views/products/add.ejs
@@ -115,8 +115,8 @@
 			
 				<!-- /footer -->
 				<%- include('../partials/scripts') %>
-			<script src="/js/productsAdd.js"></script>
-	</body>
+<!-- 			<script src="/js/productsAdd.js"></script>
+ -->	</body>
 	
 
 </html>
