--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -228,7 +228,7 @@
             </main>
             <!-- FOOTER -->
             <%- include('./partials/footer') %>
-            <%- include('./partials/script') %>
+            <%- include('./partials/scripts') %>
 <script src="/js/index.js"></script>
     </body>
 </html>
