--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -20,8 +20,10 @@
                     <li class="header__nav__li"><a href="/users/profile"><i class="fa-regular fa-user"></i></a></li>
                     <!-- <li class="header__nav__li"><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li> -->
-                    <li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">
-                    <i class="fas fa-shopping-basket"></i>
+
+                                            <li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">
+                                                    Mis compras <i class="fas fa-shopping-basket"></i>
+                                                </button></li>
                     </button></li> 
                     <% }else{ %>
                         <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
