--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -1,96 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-
-    <%- include('../partials/head') %>
-
-<body>
-    <!-- HEADER -->
-    <%- include('../partials/header') %>
-    
-     <div class="small-container cart-pag">
-        <table>
-            <tr>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Total</th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="/img/aire.jpg">
-                        <div>
-                            <p>Heladera</p>
-                            <small>Price: $00.00</small>
-                            <br>
-                            <a href="">Eliminar</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Total</th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="/img/aire.jpg">
-                        <div>
-                            <p>Heladera</p>
-                            <small>Price: $00.00</small>
-                            <br>
-                            <a href="">Eliminar</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
-            <tr>
-                <th>Producto</th>
-                <th>Cantidad</th>
-                <th>Total</th>
-            </tr>
-            <tr>
-                <td>
-                    <div class="cart-info">
-                        <img src="/img/aire.jpg">
-                        <div>
-                            <p>Heladera</p>
-                            <small>Price: $00.00</small>
-                            <br>
-                            <a href="">Eliminar</a>
-                        </div>
-                    </div>
-                </td>
-                <td><input type="number" value="1"></td>
-                <td>$50.00</td>
-            </tr>
-        </table>
-        <div class="precio-total">
-
-            <table>
-                <tr>
-                    <td>Descuento</td>
-                    <td>$50.00</td>
-                </tr>
-                <tr>
-                    <td>Envio</td>
-                    <td>$50.00</td>
-                </tr>
-                <tr>
-                    <td>Total</td>
-                    <td>$50.00</td>
-                </tr>
-            </table>
-        </div>
-     </div>
-
-    <!-- FOOTER -->
-    <%- include('../partials/footer') %>
-</body>
-
-</html>
+<table class="table" id="cart-box">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Producto</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Subtotal</th>
+        </tr>
+    </thead>
+    <tbody id="cart-items">
+        <tr>
+            <td><img style="width: 100px" src="/images/products/<%= product.image %>" alt=""></td>
+            <td>
+                <%= product.name %>
+            </td>
+            <td>
+                <div class="d-flex">
+                    <button class="btn btn-sm btn-danger" onclick="removeItem('<%= product.id %>')"><i
+                            class="fas fa-minus"></i></button>
+                    <input type="text" style="border: none; width:20px; text-align: center;" value="${quantity}">
+                    <button class="btn btn-sm btn-success" onclick="addItem('<%= product.id %>')"><i
+                            class="fas fa-plus"></i></button>
+                </div>
+            </td>
+            <td>
+                <%= product.price - (product.price * discount) / 100 %>
+            </td>
+            <td>
+                <%= product.price - (product.price * discount) / 100 * quantity %>
+            </td>
+            <td>
+                <button class="btn btn-sm btn-danger" onclick="removeItemFull('<%= product.id %>')"><i
+                        class="fas fa-trash"></i></button>
+            </td>
+        </tr>
+    </tbody>
+</table>
