--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,10 +21,7 @@
                     <!-- <li class="header__nav__li"><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li> -->
 
-                                            <li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">
-                                                    Mis compras <i class="fas fa-shopping-basket"></i>
-                                                </button></li>
-                    </button></li> 
+<li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">Mis compras <i class="fas fa-shopping-basket"></i></button></li></button></li> 
                     <% }else{ %>
                         <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
                         <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
