--- a/src/views/partials/scripts.ejs
+++ b/src/views/partials/scripts.ejs
@@ -5,3 +5,4 @@
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 <script src="/js/validation.js"></script>
+<script src="/js/orderCart.js"></script>
