--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -51,7 +51,10 @@
                             <div class="buttons">
                                 <% if (locals.userLogin && userLogin.rol===2) { %>
                                     <a href="#" class="buttons-comprar">Comprar</a>
-                                    <button  class="buttons-agregar"  onclick="addCartItem('<%=product.id%>')">Agregar al carrito</button>
+                                    <a href="#" class="buttons-agregar">Agregar al carrito</a>
+
+                                    <!--                                     <button  class="buttons-agregar"  onclick="addCartItem('<%=product.id%>')">Agregar al carrito</button>
+ -->
                                     <% } %>
 
                                         <% if (!locals.userLogin) { %>
@@ -123,7 +126,7 @@
 
             <!-- FOOTER -->
             <%- include('../partials/footer') %>
-            <%- include('../partials/scripts') %>
+                <%- include('../partials/scripts') %>
 
     </body>
 
