--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -1,38 +1,30 @@
-<table class="table" id="cart-box">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Producto</th>
-            <th scope="col">Cantidad</th>
-            <th scope="col">Precio</th>
-            <th scope="col">Subtotal</th>
-        </tr>
-    </thead>
-    <tbody id="cart-items">
-        <tr>
-            <td><img style="width: 100px" src="/images/products/<%= product.image %>" alt=""></td>
-            <td>
-                <%= product.name %>
-            </td>
-            <td>
-                <div class="d-flex">
-                    <button class="btn btn-sm btn-danger" onclick="removeItem('<%= product.id %>')"><i
-                            class="fas fa-minus"></i></button>
-                    <input type="text" style="border: none; width:20px; text-align: center;" value="${quantity}">
-                    <button class="btn btn-sm btn-success" onclick="addItem('<%= product.id %>')"><i
-                            class="fas fa-plus"></i></button>
-                </div>
-            </td>
-            <td>
-                <%= product.price - (product.price * discount) / 100 %>
-            </td>
-            <td>
-                <%= product.price - (product.price * discount) / 100 * quantity %>
-            </td>
-            <td>
-                <button class="btn btn-sm btn-danger" onclick="removeItemFull('<%= product.id %>')"><i
-                        class="fas fa-trash"></i></button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="cartModalLabel">Mi compra</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" id="box-cart">
+            <table class="table" id="cart-box">
+               
+                <tbody id="cart-items">
+
+                </tbody>
+            </table>
+        </div>
+        <div class="modal-footer">
+          <div class="d-flex justify-content-between gap-2">
+            <button type="button" class="btn btn-danger">Vaciar carrito</button>
+            <div class="d-flex gap-2">
+              <button type="button" class="btn btn-success" data-bs-dismiss="modal">Seguir comprando</button>
+              <button type="button" class="btn btn-primary">Terminar compra</button>
+            </div>
+          </div>
+          
+          
+        </div>
+      </div>
+    </div>
+</div>
+
