--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,7 +18,9 @@
                 <li><a href="/products/all">Todos los productos</a></li>
                 <% if (locals.userLogin ) { %>
                     <li class="header__nav__li"><a href="/users/profile"><i class="fa-regular fa-user"></i></a></li>
-                    <li class="header__nav__li"><a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i></a>
+                    <li class="header__nav__li" id="btn-cart"><a class="text-white" type="button" data-bs-toggle="modal" data-bs-target="#cartModal">
+                        <i class="fa-solid fa-cart-shopping"></i>
+                      </a>
                     </li> 
 
 <!-- <li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">Mis compras <i class="fas fa-shopping-basket"></i></button></li></button></li> 
@@ -30,3 +32,34 @@
         </nav>
     </section>
 </header>
+
+
+<div class="modal modal-lg fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="cartModalLabel">Mi compra</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body" >
+            <table class="table" >
+               
+                <tbody id="cart-items">
+
+                </tbody>
+            </table>
+                    <div id="msgEmpty" class="alert alert-info">Aún no has agregado productos al carrito</div>
+
+        </div>
+        <div class="modal-footer">
+            <div class="d-flex gap-2">
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Seguir comprando</button>
+              <button type="button" class="btn btn-secondary">Terminar compra</button>
+            </div>        
+          
+        </div>
+      </div>
+    </div>
+</div>
+
+
