--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,9 +22,7 @@
                         <i class="fa-solid fa-cart-shopping"></i>
                       </a>
                     </li> 
-
-<!-- <li id="btn-cart"><button type="button" class="btn fs-6" data-bs-toggle="modal" data-bs-target="#cartModal">Mis compras <i class="fas fa-shopping-basket"></i></button></li></button></li> 
- -->                    <% }else{ %>
+               <% }else{ %>
                         <li class="header__nav__li"><a href="/users/register">Crear cuenta</a></li>
                         <li class="header__nav__li"><a href="/users/login">Ingresa</a></li>
                         <% } %>
@@ -38,9 +36,9 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="cartModalLabel">Mi compra</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
+          <h1 class="modal-title fs-3" id="cartModalLabel">Panel de compras</h1>
+<!--           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+ -->        </div>
         <div class="modal-body" >
             <table class="table" >
                
