--- a/src/views/users/edit.ejs
+++ b/src/views/users/edit.ejs
@@ -11,7 +11,7 @@
                     <div class="form-reg">
                         <label for="name">NOMBRE</label>
                         <input placeholder="Daniel" type="text" name="name" id="name"
-                            value="<%= locals.old && old.name ? old.name : null %>"
+                            value="<%= user.name %> "
                             class="form-control <%= locals.errors && errors.name ? 'is-invalid' : null %>">
                         <p class="text-danger">
                             <%= locals.errors && errors.name ? errors.name.msg : null %>
@@ -20,7 +20,7 @@
                     <div class="form-reg">
                         <label for="surname">APELLIDO</label>
                         <input placeholder="Martinez" type="text" name="surname" id="surname"
-                            value="<%= locals.old && old.surname ? old.surname : null %>"
+                            value="<%= user.surname %> "
                             class="form-control <%= locals.errors && errors.surname ? 'is-invalid' : null %>">
                         <p class="text-danger">
                             <%= locals.errors && errors.surname ? errors.surname.msg : null %>
@@ -29,7 +29,7 @@
                     <div class="form-reg">
                         <label for="email">CORREO ELECTRONICO</label>
                         <input placeholder="mi@gmail.com" type="text" name="email" id="email"
-                            value="<%= locals.old && old.email ? old.email : null %>"
+                            value="<%= user.email %> "
                             class="form-control <%= locals.errors && errors.email ? 'is-invalid' : null %>">
                         <p class="text-danger">
                             <%= locals.errors && errors.email ? errors.email.msg : null %>
